serviceback.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendservice
  namespace: my-app        
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
