ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: fullstack.ghazelatech.com
    http:
      paths:

      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backendsvc
            port:
              number: 8080

      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontsvc
            port:
              number: 80
